Fixed off center logo on Home page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -53,8 +53,8 @@ body {
 
 #home {
     background-color: #a6a6a6;
-    height: 100vh;
-    width: 100vw;
+    height: 92.5vh;
+    width: 99vw;
     position: relative;
     background-size: cover;
     align-items: center;
